handle non json errors

--- a/wizard/templates/import_error.html
+++ b/wizard/templates/import_error.html
@@ -39,5 +39,10 @@
             </tr>
         </tbody>
     </table>
+    <h5>Details</h5>
+    {% if details is mapping %}
     {{ render_table(details) }}
+    {% else %}
+    <p>{{ details }}</p>
+    {% endif %}
 </div>
