--- a/wizard/templates/import_error.html
+++ b/wizard/templates/import_error.html
@@ -26,7 +26,7 @@
 
 <div class="alert alert-danger" role="alert" >
     <h4>Error</h4>
-    <p>{{ title }}</p>
+    <p>{% if filename %}{{ filename }}: {% endif %}{{ title }}</p>
     <table>
         <thead>
             <tr>
